# conventional-msg

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  flake.nix  pyproject.toml
conventional_msg/: __main__.py  config.py  validate.py
tests/: conftest.py  test_config.py  test_headline.py
